--- a/Frontend/components/Navbar/Navbar.module.css
+++ b/Frontend/components/Navbar/Navbar.module.css
@@ -1,11 +1,15 @@
 .logo {
     background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #txt {
-    color: red;
+    color: rgb(176, 6, 6);
 }
 
 #p {
-    color: red;
+    color: rgb(176, 6, 6);
 }
