--- a/Frontend/components/Navbar/Navbar.module.css
+++ b/Frontend/components/Navbar/Navbar.module.css
@@ -4,12 +4,16 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    color: rgb(176, 6, 6);
+    list-style: none;
+    gap: 10em;
 }
 
 #txt {
     color: rgb(176, 6, 6);
 }
 
-#p {
+.liNav {
     color: rgb(176, 6, 6);
+    
 }
