css navbar och footer

--- a/Frontend/components/Footer/Footer.module.css
+++ b/Frontend/components/Footer/Footer.module.css
@@ -9,3 +9,10 @@
     font-size: large;
     font-weight: bold;
 }
+
+#a {
+    color:rgb(163, 34, 34);
+    font-size: large;
+    font-weight: bold;
+    size: 10px;
+}
