--- a/Frontend/components/Navbar/Navbar.module.css
+++ b/Frontend/components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
     background-color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    
     align-items: center;
     color: rgb(176, 6, 6);
     list-style: none;
@@ -16,4 +16,10 @@
 .liNav {
     color: rgb(176, 6, 6);
     
+}
+
+#iconRorm {
+    
+    height: 500px; 
+    width: 500px;
 }
