--- a/Frontend/components/Navbar/Navbar.module.css
+++ b/Frontend/components/Navbar/Navbar.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     color: rgb(176, 6, 6);
     list-style: none;
-    gap: 10em;
+    gap: 5rem;
 }
 
 #txt {
@@ -19,7 +19,7 @@
 }
 
 #iconRorm {
-    
+    background-color: white;
     height: 500px; 
     width: 500px;
 }
