--- a/Frontend/components/Navbar/Navbar.module.css
+++ b/Frontend/components/Navbar/Navbar.module.css
@@ -1,3 +1,4 @@
+
 .logo {
     background-color: black;
     display: flex;
@@ -5,9 +6,12 @@
     color: rgb(176, 6, 6);
     list-style: none;
     gap: 5em;
-    justify-content: flex-start;
+    justify-content:center;
     align-content: center;
     align-items: center;
+    width: 100%;
+    text-decoration: none;
+    margin: 0;
 }
 
 #txt {
