--- a/Frontend/styles/globals.css
+++ b/Frontend/styles/globals.css
@@ -6,14 +6,14 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
+  a {
   color: inherit;
   text-decoration: none;
-}
+}  
 
-* {
+ * {
   box-sizing: border-box;
-}
+} 
 
 @media (prefers-color-scheme: dark) {
   html {
@@ -25,6 +25,7 @@ a {
   }
 }
 
-@media screen and (min-width: 800px) {
-  
+/* @media screen and (min-width: 800px) {
+  color: black;
 }
+ */
