--- a/Frontend/components/Modal/Modal.module.css
+++ b/Frontend/components/Modal/Modal.module.css
@@ -11,7 +11,7 @@
 }
 
 .modal{
-    background-color: grey;
+    background-color: rgb(255, 255, 255);
     padding: 2em;
     border-radius: 4px;
     color: #000000;
@@ -41,11 +41,19 @@
 }
 
 .loginBtn {
-    background-color: rgb(3, 83, 3);
+    background-color: rgba(12, 76, 144, 0.874);
+    border-radius: 10px;
+    height: 2em;
+    cursor: pointer;
+    
 }
 
 .registerBtn {
-    background-color: black;
+    background-color: rgba(0, 238, 255, 0.874);
+    border-radius: 10px;
+    height: 2em;
+    cursor: pointer;
+    
 }
 
 .textLoggaIn {
