--- a/Frontend/components/Footer/Footer.module.css
+++ b/Frontend/components/Footer/Footer.module.css
@@ -2,8 +2,8 @@
     background-color: white;
     display: flex;
     justify-content: center;
-    gap: 2em
-
+    gap: 2em;
+    margin-top: auto;
 }
 
 #p {
