--- a/Frontend/styles/Home.module.css
+++ b/Frontend/styles/Home.module.css
@@ -1,9 +1,61 @@
+/* mitt eget  */
+.divEtt {
+  display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    display: flex;
+    width: 100%;
+    height:20%
+}
+
+
+.divTvåBakgrund {
+  
+  background-color: rgb(155, 5, 5);
+  width: 100%;
+  height: 500px;
+}
+
+.divTvåImg {
+  display: flex;
+  flex-direction: row;
+}
+
+.tekning {
+  max-height: 500px;
+  /* max-width: 300px; */
+  width: 500px;
+  
+}
+
+@media screen and (max-width: 800px) {
+  .divTvåBakgrund {
+    
+    background-color: rgb(155, 5, 5);
+    width: 100%;
+    height: 1500px;
+  }
+  .divTvåImg {
+    display: flex;
+    flex-direction: column;
+  }
+  .tekning {
+    max-height: 500px;
+    /* max-width: 300px; */
+    width: 500px;
+  }
+    
+}
+
+/* mitt eget  */
+
 .container {
   padding: 0 2rem;
 }
 
 .main {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   padding: 4rem 0;
   flex: 1;
   display: flex;
