--- a/Frontend/styles/Spelschema.module.css
+++ b/Frontend/styles/Spelschema.module.css
@@ -1,4 +1,14 @@
+.divEtt {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
 .iFrameContainer {
+    display: flex;
+    
     position: relative;
     height: 800px;
     width: 1000px;
