--- a/Frontend/styles/Home.module.css
+++ b/Frontend/styles/Home.module.css
@@ -11,15 +11,21 @@
 
 
 .divTvåBakgrund {
-  
+  box-sizing:border-box;
   background-color: rgb(155, 5, 5);
   width: 100%;
   height: 500px;
 }
 
+.slidesshowContainer {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
 .divTvåImg {
-  display: flex;
-  flex-direction: row;
+  display: none;
+
 }
 
 .tekning {
@@ -27,6 +33,38 @@
   /* max-width: 300px; */
   width: 500px;
   
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.textRuta {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.dotsDiv {
+  text-align: center;
+}
+
+.dot {
+
 }
 
 @media screen and (max-width: 800px) {
