--- a/Frontend/styles/Home.module.css
+++ b/Frontend/styles/Home.module.css
@@ -24,7 +24,8 @@
 }
 
 .divTvåImg {
-  display: none;
+  /* display: none; */
+  width: 100%;
 
 }
 
@@ -34,20 +35,7 @@
   width: 500px;
   
 }
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
+
 
 .textRuta {
   color: #f2f2f2;
@@ -59,13 +47,6 @@
   text-align: center;
 }
 
-.dotsDiv {
-  text-align: center;
-}
-
-.dot {
-
-}
 
 @media screen and (max-width: 800px) {
   .divTvåBakgrund {
