--- a/Frontend/styles/Home.module.css
+++ b/Frontend/styles/Home.module.css
@@ -14,9 +14,10 @@
   display: flex;
   background-color: rgb(155, 5, 5);
   width: 100%;
-  height: 1500px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   justify-content: center;
-  position: absolute;
+
 }
 
 .divTvåImg {
@@ -45,6 +46,13 @@
     height:20%
 }
 
+.h1 {
+  font-size: xx-large;
+}
+
+.pEtt, .pTwo, .pTre{
+  font-size:xx-large;
+}
 
 @media screen and (max-width: 800px) {
   .divTvåBakgrund {
